updates to setup

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,15 +1,9 @@
-[bumpversion]
-current_version = 0.1.0
-commit = True
-tag = True
-
-[bumpversion:file:setup.py]
-search = version='{current_version}'
-replace = version='{new_version}'
-
-[bumpversion:file:ipyrun/__init__.py]
-search = __version__ = '{current_version}'
-replace = __version__ = '{new_version}'
+[versioneer]
+VCS = git
+versionfile_source = ipyrun/_version.py
+versionfile_build = ipyrun/_version.py
+tag_prefix =
+parentdir_prefix = ipyrun-
 
 [bdist_wheel]
 universal = 1
