added mfom to PYTHONPATH to develop them concurrently

--- a/.vscode/dev.env
+++ b/.vscode/dev.env
@@ -1,2 +1,1 @@
-PYTHONPATH=/mnt/c/engDev/git_mf/ipyrun
-MF_ROOT=/mnt/c/engDev/git_mf
+PYTHONPATH=/mnt/c/engDev/git_mf/ipyrun:/mnt/c/engDev/git_mf/ipypdt:/mnt/c/engDev/git_mf/mfom
