--- a/.gitignore
+++ b/.gitignore
@@ -127,3 +127,4 @@ interim
 .idea/inspectionProfiles/profiles_settings.xml
 .idea/inspectionProfiles/Project_Default.xml
 conda.recipe/conda_build_config.yaml
+ipyrun/run.ipynb
