--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,16 @@
-Markdown==3.3.4
+ipyaggrid==0.2.1
+plotly==4.14.3
+dacite==1.6.0
+mf_file_utilities==0.0.2
 pandas==1.2.4
-ipyfilechooser==0.4.3
+mfom==0.2.3
+Markdown==3.3.4
+ipysheet==0.4.4
+ipywidgets==7.6.3
 xlsxtemplater==0.1.5
 halo==0.0.31
-ipywidgets==7.6.3
-dacite==1.6.0
-ipysheet==0.4.4
-plotly==4.14.3
-ipyaggrid==0.2.1
-mf_file_utilities==0.0.2
+ipyfilechooser==0.4.3
 pydantic==1.8.1
-mfom==0.1.1+1.gd4469b2.dirty
 dataclasses==0.8
-ipython==7.22.0
+ipython==7.24.1
 PyYAML==5.4.1
