--- a/binder/environment.yml
+++ b/binder/environment.yml
@@ -15,7 +15,7 @@ dependencies:
   - ipywidgets
   - ipysheet
   - ipyfilechooser
-  - ipyrun=v0_1_1
+  - ipyrun=v0.1.2
   - voila
   - plotly
   - halo
