--- a/binder/environment.yml
+++ b/binder/environment.yml
@@ -10,13 +10,13 @@ dependencies:
   - python>=3.7
   - numpy
   - pandas
-  - jupyterlab=3.0.14
+  - jupyterlab>=3.0.14
   - xeus-python
   - ipywidgets
-  - ipysheet
+  - ipysheet>=0.5.0
   - ipyfilechooser
-  - ipyrun=v0.1.2
-  - voila
+  - ipyrun>=v0.1.9
+  - voila>=0.2.11
   - plotly
   - halo
   - jupytext
@@ -35,3 +35,5 @@ dependencies:
   - xlsxtemplater 
   - mf_file_utilities 
   - mfom
+  pip:
+    - mydocstring
