--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,12 @@
 Markdown==3.3.4
-ipysheet==0.4.4
+ipysheet==0.5.0
 pandas==1.2.4
 ipydatagrid
 halo==0.0.31
-mfom==0.3.0
+mfom
 xlsxtemplater==0.1.5
 pydantic==1.8.1
-mf_file_utilities==0.0.2
+mf_file_utilities
 plotly==4.14.3
 ipyfilechooser==0.4.3
 ipywidgets==7.6.3
