--- a/.gitignore
+++ b/.gitignore
@@ -128,3 +128,4 @@ interim
 .idea/inspectionProfiles/Project_Default.xml
 conda.recipe/conda_build_config.yaml
 ipyrun/run.ipynb
+/src/ipyrun/*.ipynb
