--- a/requirements_dev.txt
+++ b/requirements_dev.txt
@@ -8,3 +8,24 @@ coverage==4.5.4
 Sphinx==1.8.5
 twine==1.14.0
 
+Markdown==3.3.4
+ipysheet==0.5.0
+pandas==1.2.4
+ipydatagrid
+halo==0.0.31
+mfom
+pydantic==1.8.1
+plotly==4.14.3
+ipyfilechooser==0.4.3
+ipywidgets==7.6.3
+dacite==1.6.0
+dataclasses==0.8
+ipython==7.24.1
+PyYAML==5.4.1
+mydocstring
+stringcase
+xlsxtemplater==0.1.5
+mf_file_utilities
+ipyautoui
+python-devtools
+pygments
