--- a/setup.cfg
+++ b/setup.cfg
@@ -5,6 +5,20 @@ versionfile_build = ipyrun/_version.py
 tag_prefix =
 parentdir_prefix = ipyrun-
 
+[tool:pytest]
+norecursedirs= .* *.egg* build dist conda.recipe
+addopts =
+    --junitxml=junit.xml
+    --ignore setup.py
+    --ignore run_test.py
+    --tb native
+    --strict-markers
+    --durations=20
+markers =
+    serial: execute test serially (to avoid race conditions)
+testpaths =
+    tests
+    
 [bdist_wheel]
 universal = 1
 
