--- a/setup.cfg
+++ b/setup.cfg
@@ -1,3 +1,8 @@
+[flake8]
+max-line-length = 100
+ignore = E122,E123,E126,E127,E128,E731,E722
+exclude = build,ipyrun/_version.py,tests,conda.recipe,.git,versioneer.py,benchmarks,.asv,docs
+
 [versioneer]
 VCS = git
 versionfile_source = ipyrun/_version.py
@@ -21,10 +26,3 @@ testpaths =
     
 [bdist_wheel]
 universal = 1
-
-[flake8]
-exclude = docs
-
-[aliases]
-# Define setup.py command aliases here
-
