--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,17 @@
-Markdown==3.3.4
-ipysheet==0.5.0
-pandas==1.2.4
-ipydatagrid
-halo==0.0.31
-mfom
-pydantic==1.8.1
-plotly==4.14.3
-ipyfilechooser==0.4.3
-ipywidgets==7.6.3
-dacite==1.6.0
+traitlets==5.1.1
+plotly==5.5.0
+ipywidgets==7.6.5
+pandas==1.3.5
+Jinja2==3.0.3
+numpy==1.22.0
 dataclasses==0.8
-ipython==7.24.1
-PyYAML==5.4.1
-mydocstring
-stringcase
-xlsxtemplater==0.1.5
-mf_file_utilities
+halo==0.0.31
+immutables==0.16
+ipython==8.1.1
+Markdown==3.3.6
+pydantic==1.9.0
+PyYAML==6.0
+stringcase==1.2.0
+tg.devtools==2.4.3
 ipyautoui
-jsonschema2md
+mf_file_utilities
