--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,4 @@
 traitlets==5.1.1
-plotly==5.5.0
 ipywidgets==7.6.5
 pandas==1.3.5
 Jinja2==3.0.3
@@ -12,6 +11,4 @@ Markdown==3.3.6
 pydantic==1.9.0
 PyYAML==6.0
 stringcase==1.2.0
-tg.devtools==2.4.3
-ipyautoui
-mf_file_utilities
+ipyautoui==0.2.1
