--- a/docs/examples/linegraph/linegraph_appdata/config-shell_handler.json
+++ b/docs/examples/linegraph/linegraph_appdata/config-shell_handler.json
@@ -6,7 +6,7 @@
     "configs": [
         {
             "index": 0,
-            "fpth_script": "/mnt/c/engDev/git_mf/ipyrun/docs/examples/linegraph/linegraph_core/script_linegraph.py",
+            "path_run": "/mnt/c/engDev/git_mf/ipyrun/docs/examples/linegraph/linegraph_core/script_linegraph.py",
             "name": "linegraph",
             "long_name": "00 - Linegraph",
             "key": "00-linegraph",
@@ -43,12 +43,12 @@
             "fpth_log": "00-linegraph/log.csv",
             "call": "python -O",
             "params": {},
-            "shell_template": "{{ call }} {{ fpth_script }}{% for f in fpths_inputs %} {{f}}{% endfor %}{% for f in fpths_outputs %} {{f}}{% endfor %}{% for k,v in params.items()%} --{{k}} {{v}}{% endfor %}\n",
+            "shell_template": "{{ call }} {{ path_run }}{% for f in fpths_inputs %} {{f}}{% endfor %}{% for f in fpths_outputs %} {{f}}{% endfor %}{% for k,v in params.items()%} --{{k}} {{v}}{% endfor %}\n",
             "shell": "python -O /mnt/c/engDev/git_mf/ipyrun/docs/examples/linegraph/linegraph_core/script_linegraph.py 00-linegraph/in-00-linegraph.lg.json 00-linegraph/out-00-linegraph.csv 00-linegraph/out-00-linegraph.plotly.json"
         },
         {
             "index": 1,
-            "fpth_script": "/mnt/c/engDev/git_mf/ipyrun/docs/examples/linegraph/linegraph_core/script_linegraph.py",
+            "path_run": "/mnt/c/engDev/git_mf/ipyrun/docs/examples/linegraph/linegraph_core/script_linegraph.py",
             "name": "linegraph",
             "long_name": "01 - Linegraph",
             "key": "01-linegraph",
@@ -85,7 +85,7 @@
             "fpth_log": "01-linegraph/log.csv",
             "call": "python -O",
             "params": {},
-            "shell_template": "{{ call }} {{ fpth_script }}{% for f in fpths_inputs %} {{f}}{% endfor %}{% for f in fpths_outputs %} {{f}}{% endfor %}{% for k,v in params.items()%} --{{k}} {{v}}{% endfor %}\n",
+            "shell_template": "{{ call }} {{ path_run }}{% for f in fpths_inputs %} {{f}}{% endfor %}{% for f in fpths_outputs %} {{f}}{% endfor %}{% for k,v in params.items()%} --{{k}} {{v}}{% endfor %}\n",
             "shell": "python -O /mnt/c/engDev/git_mf/ipyrun/docs/examples/linegraph/linegraph_core/script_linegraph.py 01-linegraph/in-01-linegraph.lg.json 01-linegraph/out-01-linegraph.csv 01-linegraph/out-01-linegraph.plotly.json"
         }
     ]
