--- a/docs/examples/linegraph/00-linegraph/config-shell_handler.json
+++ b/docs/examples/linegraph/00-linegraph/config-shell_handler.json
@@ -1,6 +1,8 @@
 {
     "index": 0,
     "path_run": "/mnt/c/engDev/git_mf/ipyrun/docs/examples/linegraph/linegraph_core/script_linegraph.py",
+    "pythonpath": "/mnt/c/engDev/git_mf/ipyrun/docs/examples/linegraph/linegraph_core",
+    "run": "script_linegraph.py",
     "name": "linegraph",
     "long_name": "00 - Linegraph",
     "key": "00-linegraph",
@@ -37,6 +39,6 @@
     "fpth_log": "00-linegraph/log.csv",
     "call": "python -O",
     "params": {},
-    "shell_template": "{{ call }} {{ path_run }}{% for f in fpths_inputs %} {{f}}{% endfor %}{% for f in fpths_outputs %} {{f}}{% endfor %}{% for k,v in params.items()%} --{{k}} {{v}}{% endfor %}\n",
-    "shell": "python -O /mnt/c/engDev/git_mf/ipyrun/docs/examples/linegraph/linegraph_core/script_linegraph.py 00-linegraph/in-00-linegraph.lg.json 00-linegraph/out-00-linegraph.csv 00-linegraph/out-00-linegraph.plotly.json"
+    "shell_template": "{{ call }} {{ run }}{% for f in fpths_inputs %} {{f}}{% endfor %}{% for f in fpths_outputs %} {{f}}{% endfor %}{% for k,v in params.items()%} --{{k}} {{v}}{% endfor %}\n",
+    "shell": "python -O script_linegraph.py 00-linegraph/in-00-linegraph.lg.json 00-linegraph/out-00-linegraph.csv 00-linegraph/out-00-linegraph.plotly.json"
 }
