--- a/docs/examples/linegraph/linegraph_appdata/01-linegraph_core/config-shell_handler.json
+++ b/docs/examples/linegraph/linegraph_appdata/01-linegraph_core/config-shell_handler.json
@@ -1,8 +1,8 @@
 {
     "index": 1,
-    "path_run": "/mnt/c/engDev/git_mf/ipyrun/docs/examples/linegraph/linegraph_core",
-    "pythonpath": "/mnt/c/engDev/git_mf/ipyrun/docs/examples/linegraph",
-    "run": "linegraph_core",
+    "path_run": "/mnt/c/engDev/git_mf/ipyrun/docs/examples/linegraph/linegraph_core/script_linegraph.py",
+    "pythonpath": "/mnt/c/engDev/git_mf/ipyrun/docs/examples/linegraph/linegraph_core",
+    "run": "script_linegraph.py",
     "name": "linegraph_core",
     "long_name": "01 - Linegraph Core",
     "key": "01-linegraph_core",
@@ -40,5 +40,5 @@
     "call": "python -O -m",
     "params": {},
     "shell_template": "{{ call }} {{ run }}{% for f in fpths_inputs %} {{f}}{% endfor %}{% for f in fpths_outputs %} {{f}}{% endfor %}{% for k,v in params.items()%} --{{k}} {{v}}{% endfor %}\n",
-    "shell": "python -O -m linegraph_core 01-linegraph_core/in-01-linegraph_core.lg.json 01-linegraph_core/out-01-linegraph_core.csv 01-linegraph_core/out-01-linegraph_core.plotly.json"
+    "shell": "python -O -m script_linegraph.py 01-linegraph_core/in-01-linegraph_core.lg.json 01-linegraph_core/out-01-linegraph_core.csv 01-linegraph_core/out-01-linegraph_core.plotly.json"
 }
