--- a/docs/examples/linegraph/linegraph_appdata/02-linegraph_core/config-shell_handler.json
+++ b/docs/examples/linegraph/linegraph_appdata/02-linegraph_core/config-shell_handler.json
@@ -8,9 +8,9 @@
     "key": "02-linegraph_core",
     "fdir_root": "/mnt/c/engDev/git_mf/ipyrun/docs/examples/linegraph/linegraph_appdata",
     "fdir_appdata": "02-linegraph_core",
-    "in_batch": true,
+    "in_batch": false,
     "status": "up_to_date",
-    "update_config_at_runtime": true,
+    "update_config_at_runtime": false,
     "autodisplay_definitions": [
         {
             "path": "/mnt/c/engDev/git_mf/ipyrun/docs/examples/linegraph/linegraph_core/input_schema_linegraph.py",
