--- a/environment-dev.yml
+++ b/environment-dev.yml
@@ -5,17 +5,17 @@ name: ipyrun-dev
 channels:
   - defaults
   - conda-forge
-  - file:///mnt/conda-bld/
 dependencies:
   - python=3.9
-  - ipyautoui
   - jupytext
   - jupyterlab-lsp
   - python-lsp-server
   - nb_black
+  - halo
   - traitlets
   - voila
   - pip
   - pip:
     - traitlets-paths
     - seedir
+    - git+https://git@github.com/maxfordham/ipyautoui@main
