--- a/environment-dev.yml
+++ b/environment-dev.yml
@@ -21,4 +21,4 @@ dependencies:
   - pip:
     - traitlets-paths
     - seedir
-    - git+https://git@github.com/maxfordham/ipyautoui@main
+    - git+https://git@github.com/maxfordham/ipyautoui
