--- a/environment-dev.yml
+++ b/environment-dev.yml
@@ -5,7 +5,6 @@ name: ipyrun-dev
 channels:
   - defaults
   - conda-forge
-  - file:///mnt/conda-bld/
 dependencies:
   - python=3.9
   - ipyautoui
@@ -21,3 +20,4 @@ dependencies:
   - pip:
     - traitlets-paths
     - seedir
+    - git+ssh://git@github.com/maxfordham/ipyautoui.git@0.4.8
