--- a/.vscode/dev.env
+++ b/.vscode/dev.env
@@ -1,1 +1,1 @@
-PYTHONPATH=/mnt/c/engDev/git_mf/ipyrun:/mnt/c/engDev/git_mf/ipypdt:/mnt/c/engDev/git_mf/mfom
+PYTHONPATH=/home/jovyan/ipyrun:/home/jovyan/ipypdt:/home/jovyan/mfom
