--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ build-backend = "hatchling.build"
 [project]
 name = "ipyrun"
 dynamic = ["version"]
-description = "wrapper that sits on top of ipywidgets and other ipy widget libraries to template / automate the creation of widget forms. Uses pydantic to create defined data-container and serialisation to JSON. Includes example patterns for adding new custom widgets."
+description = "template UI (ipywidgets / ipyautoui) for running python scripts in jupyterlab / voila."
 readme = "README.md"
 authors = [{ name = "John Gunstone", email = "gunstone.john@gmail.com" }]
 keywords = ["ipyrun"]
@@ -15,7 +15,16 @@ classifiers = [
     "Natural Language :: English",
     "Programming Language :: Python :: 3.9",
 ]
-dependencies = ["ipyautoui", "Jinja2"]
+dependencies = [
+    "ipyautoui>=0.7",
+    "pydantic>2",
+    "Jinja2",
+    "halo",
+    "emoji",
+    "PyYAML",
+    "stringcase",
+    "immutables",
+]
 
 [project.urls]
 Homepage = "https://github.com/maxfordham/ipyrun"
