--- a/environment-dev.yml
+++ b/environment-dev.yml
@@ -7,18 +7,18 @@ channels:
   - conda-forge
 dependencies:
   - python
-  - halo
+  - jupyterlab
   - jupytext
   - jupyterlab-lsp
   - python-lsp-server
   - black
   - nb_black
   - halo
-  - traitlets
   - voila
   - emoji
+  - plotly # for example: TODO: change to vega
+  - jupyter-dash # for example: TODO: change to vega
   - pip
   - pip:
-    - traitlets-paths
     - seedir
-    - ipyautoui>=0.5.0
+    - -e ../ipyautoui 
