--- a/environment-dev.yml
+++ b/environment-dev.yml
@@ -7,6 +7,7 @@ channels:
   - conda-forge
 dependencies:
   - python
+  - pytest
   - jupyterlab
   - jupytext
   - jupyterlab-lsp
@@ -21,4 +22,5 @@ dependencies:
   - pip
   - pip:
     - seedir
-    - -e ../ipyautoui 
+    - dirty-equals
+    - ipyautoui>=0.7.1
